--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -36,5 +36,44 @@
             "somethingWrong": "Something went wrong, please try again later",
             "button": "OK"
         }
+    },
+    "calendar": {
+        "days": {
+            "monday": "Monday",
+            "tuesday": "Tuesday",
+            "wednesday": "Wednesday",
+            "thursday": "Thursday",
+            "friday": "Friday",
+            "saturday": "Saturday",
+            "sunday": "Sunday",
+            "short": {
+                "monday": "Mon",
+                "tuesday": "Tue",
+                "wednesday": "Wed",
+                "thursday": "Thu",
+                "friday": "Fri",
+                "saturday": "Sat",
+                "sunday": "Sun"
+            }
+        },
+        "months": {
+            "january": "January",
+            "february": "February",
+            "march": "March",
+            "april": "April",
+            "may": "May",
+            "june": "June",
+            "july": "July",
+            "august": "August",
+            "september": "September",
+            "october": "October",
+            "november": "November",
+            "december": "December"
+        },
+        "error": {
+            "title": "Error",
+            "message": "Something went wrong, please try again later",
+            "button": "OK"
+        }
     }
 }
