[ADD] home page

--- a/src/i18n/json/fr.json
+++ b/src/i18n/json/fr.json
@@ -38,6 +38,7 @@
         }
     },
     "calendar": {
+        "today": "Aujourd'hui",
         "days": {
             "monday": "Lundi",
             "tuesday": "Mardi",
@@ -68,7 +69,21 @@
             "september": "Septembre",
             "october": "Octobre",
             "november": "Novembre",
-            "december": "Décembre"
+            "december": "Décembre",
+            "short": {
+                "january": "Jan",
+                "february": "Fév",
+                "march": "Mar",
+                "april": "Avr",
+                "may": "Mai",
+                "june": "Juin",
+                "july": "Juil",
+                "august": "Août",
+                "september": "Sept",
+                "october": "Oct",
+                "november": "Nov",
+                "december": "Déc"
+            }
         },
         "error": {
             "title": "Erreur",
