--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -38,6 +38,7 @@
         }
     },
     "calendar": {
+        "today": "Today",
         "days": {
             "monday": "Monday",
             "tuesday": "Tuesday",
@@ -68,7 +69,21 @@
             "september": "September",
             "october": "October",
             "november": "November",
-            "december": "December"
+            "december": "December",
+            "short": {
+                "january": "Jan",
+                "february": "Feb",
+                "march": "Mar",
+                "april": "Apr",
+                "may": "May",
+                "june": "Jun",
+                "july": "Jul",
+                "august": "Aug",
+                "september": "Sep",
+                "october": "Oct",
+                "november": "Nov",
+                "december": "Dec"
+            }
         },
         "error": {
             "title": "Error",
