--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">paperwork-mobile</string>
+    <string name="facebook_app_id">969915637497521</string>
 </resources>
