[ADD] 86% coverage for ProcessIdea page

--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -140,7 +140,9 @@
         "errorDescription": "Description is required.",
         "helpContent": "Description of the document.",
         "errorContent": "Content is required.",
+        "wSuccess": "Success",
         "success": "Your process idea have been sent with success!",
+        "wFail": "Error",
         "fail": "Some problem occurs... Please try again later"
     },
     "settings": {
