--- a/src/i18n/json/fr.json
+++ b/src/i18n/json/fr.json
@@ -154,6 +154,52 @@
             "alertUserNotFound": "Erreur: Utilisateur introuvable.",
             "alertSystemError": "Erreur: Erreur système.",
             "alertMissingToken": "Erreur: Paramètre token manquant."
+        },
+        "help": {
+            "textLexicon": "Besoin d'avoir la signification d'un terme ?",
+            "buttonLexicon": "Cliquez ici !",
+            "question1": "Comment voir ses informations personnelles ?",
+            "answer1": "Afin de modifier ses informations personnelles, rendez-vous sur la page Profile en cliquant sur l'image ci-dessous.\nDepuis cette page, vous pouvez:\n- Modifier votre photo de profil en entrant le lien de l'image de votre choix dans le champs 'Profile picture link',\n- Modifier votre nom d'utilisateur via le champ 'Username',\n- Modifier votre adresse email partagée via le champ 'Email',\n- Et enfin modifier votre mot de passe en entrant deux fois le même nouveau mot de passe.",
+            "question2": "Comment ajouter une procédure ?",
+            "answer2": "Afin d'ajouter de nouvelles procédures, rendez-vous sur la page Quiz en cliquant sur l'image ci-dessous.\nDepuis cette page, vous pourrez choisir une procédure parmi toutes celles existantes.\n Une fois la procédure trouvée vous devrez répondre à des questions sur votre avancement dans celle-ci (possession des documents nécéssaires, élégibilité à l'avaancée de la procédure, etc...).\n Une fois la phase de questions terminée, vous serez redirigés vers une page compilant toutes les informations sur la procédure en cours, et vous pourrez ajouter des évènements liés à celle-ci dans le calendrier si nécéssaire.",
+            "question3": "Comment ajouter un évènement au calendrier ?",
+            "answer3": "Afin d'ajouter des évènements liés aux procédures, rendez-vous sur la page Calendar en cliquant sur l'image ci-dessous.\n Depuis le calendrier, vous pourrez voir les différents évènements déjà intanciés mais aussi en ajouter.\nPour ce faire, il vous suffit de cliquer sur la date à laquelle vous souhaitez ajouter un évènement.\n Cliquez ensuite sur le bouton 'Add an Event'. Il vous faudra par la suite renseigner l'heure à laquelle votre évènement a lieu ainsi que la procédure liée à l'évènement parmi la liste de procédures en cours et enfin l'étape de celle-ci. Cliquez enfin sur 'Submit' une fois tous les éléments rensignés afin de créer l'évènement.",
+            "question4": "Comment supprimer ou modifier un évènement au calendrier ?",
+            "answer4": "Afin de modifier ou de supprimer des évènements liés aux procédures, rendez-vous sur la page Calendar en cliquant sur l'image ci-dessous.\n Depuis le calendrier, vous pourrez voir les différents évènements déjà intanciés mais aussi les modifier ou les supprimer.\nPour ce faire, il vous suffit de cliquer sur la date pour laquelle vous souhaitez modifier l'évènement.\n Cliquez ensuite sur le bouton 'Edit/Delete an Event'. Il vous faudra par la suite, pour le modifier renseigner la nouvelle heure ou la nouvelle étape que vous souhaitez attribuer à votre évènement puis cliquer sur le bouton 'Submit' pour le modifier, ou alors cliquer directement sur le bouton 'Delete Event' pour le supprimer.",
+            "question5": "Je ne trouve pas la procédure dont j'ai besoin dans la liste des procédures disponibles ?",
+            "answer5": "Dans le cas où une procédure que vous voulez lancer n'est pas disponible sur notre site, vous avez la possibilité de nous le faire savoir via la page Process Idea en cliquant sur l'image ci-dessous.\n Renseignez alors le titre, la description et le contenu de la procédure voulue, appuyez sur le bouton 'Submit' et nous recevrons votre demande. Vous pouvez aussi nous contacter via le bouton de contact en bas de cette page en nous envoyant un mail à paperwork_2024@labeip.epitech.eu.",
+            "question6": "Comment modifier mes informations personnelles ?",
+            "answer6": "Pour modifier vos informations personnelles, rendez-vous dans la page Settings, ici vous pourrez:\n- Choisir une photo de profile,\n- Modifier votre nom,\n- Modifier votre prénom,\n- Modifier votre âge,\n- Modifier le langage de l'application,\n- Modifier votre adresse email,\n- Modifier votre adresse postale,\n- Modifier votre numéro de téléphone,\n- Et enfin modifier votre mot de passe.",
+            "question7": "Comment faire si je ne comprends pas un des mot technique utilisé dans le site ?",
+            "answer7": "La page Lexicon listant les définition des mots techniques est disponible en cliquant sur l'image ci-dessous !"
+        },
+        "lexicon": {
+            "textHelp": "Une question sur les fonctionnalités de Paperwork ?",
+            "buttonHelp": "Cliquez ici !",
+            "question1": "Carte Vitale",
+            "answer1": "L'assurance maladie couvre généralement un large éventail de dépenses médicales, telles que l'hospitalisation, les interventions chirurgicales, les médicaments sur ordonnance, les tests de laboratoire et les visites médicales. Certaines polices peuvent également couvrir des traitements spécialisés tels que les soins dentaires, la vision ou les soins de santé mentale.",
+            "question2": "Passeport",
+            "answer2": "Un passeport est un document de voyage délivré par un gouvernement à ses citoyens dans le but de voyager à l'étranger. Il constitue une preuve officielle d'identité et de citoyenneté qui permet au titulaire du passeport d'entrer et de sortir des pays étrangers, ainsi que de demander une assistance et une protection de son gouvernement pendant son séjour à l'étranger.",
+            "question3": "Visa",
+            "answer3": "Un visa est un document officiel ou une mention apposée sur un passeport qui permet au titulaire du passeport d'entrer, de séjourner ou de sortir d'un pays étranger pour une durée et un motif spécifiques. Le but d'un visa est de réguler et de contrôler l'entrée et le séjour des visiteurs étrangers dans un pays.",
+            "question4": "Justificatif de domicile",
+            "answer4": "Un justificatif de domicile est un document qui vérifie votre adresse de domicile. Il est souvent requis comme une forme d'identification lorsque vous avez besoin d'ouvrir un compte bancaire, de demander du crédit ou d'obtenir une carte d'identité émise par le gouvernement. Un justificatif de domicile peut prendre différentes formes, mais il inclut généralement votre nom, votre adresse et une date."
+        },
+        "mainmenu": {
+            "title": "Votre Espace Paperwork",
+            "ascending": "Croissant",
+            "descending": "Décroissant",
+            "newProcessButton": "Nouvelle Procédure",
+            "calendar": "Calendrier",
+            "applied": "Terminé",
+            "left": "Restant",
+            "nothing": "Rien à Afficher",
+            "process": "Procédure",
+            "events": "Évènements",
+            "needHelp": "Besoin d'aide ?",
+            "help": "Aide",
+            "lexicon": "Lexique",
+            "today": "Aujourd'hui"
         }
     }
 }
