--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -205,5 +205,20 @@
         "answer3": "A visa is an official document or endorsement placed in a passport that allows the passport holder to enter, stay, or exit a foreign country for a specific period of time and for a specific purpose. The purpose of a visa is to regulate and control the entry and stay of foreign visitors in a country.",
         "question4": "Proof of Residence",
         "answer4": "A proof of address is a document that verifies where you live. It is often required as a form of identification when you need to open a bank account, apply for credit, or get a government-issued ID card. A proof of address can take many forms, but it typically includes your name, your address, and a date."
+    },
+    "profile": {
+        "personnalInfo": "Personnal informations",
+        "edit": "Edit",
+        "noInfo": "No informations",
+        "ongoingProcess": "Ongoing process",
+        "editInfo": {
+            "title" : "Edit your informations",
+            "address": "Address",
+            "age": "Age",
+            "name": "Name",
+            "phoneNumber": "Phone number",
+            "submit": "Submit",
+            "selectLanguage": "Select language"
+        }
     }
 }
