[UPD] improve profile page and main menu

--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -211,6 +211,15 @@
         "edit": "Edit",
         "noInfo": "No informations",
         "ongoingProcess": "Ongoing process",
+        "noProcess": "No ongoing process",
+        "username": "Username",
+        "firstname": "Firstname",
+        "name": "Name",
+        "language": "Language",
+        "age": "Age",
+        "email": "Email",
+        "address": "Address",
+        "phoneNumber": "Phone number",
         "editInfo": {
             "title" : "Edit your informations",
             "address": "Address",
