--- a/src/i18n/json/fr.json
+++ b/src/i18n/json/fr.json
@@ -210,6 +210,15 @@
         "edit": "Modifier",
         "noInfo": "Aucune information",
         "ongoingProcess": "Processus en cours",
+        "noProcess": "Aucun processus en cours",
+        "username": "Nom d'utilisateur",
+        "firstname": "Prénom",
+        "name": "Nom",
+        "language": "Langue",
+        "age": "Age",
+        "email": "Email",
+        "address": "Adresse",
+        "phoneNumber": "Numéro de téléphone",
         "editInfo": {
             "title" : "Modifier vos informations",
             "address": "Adresse",
