[ADD] Header with home button, page title and drawer to change pages

--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -220,5 +220,11 @@
             "submit": "Submit",
             "selectLanguage": "Select language"
         }
+    },
+    "header": {
+        "navigationQuestion": "Choose where you want to navigate:",
+        "homePage": "Home",
+        "profilePage": "Profile",
+        "settingsPage": "Settings"
     }
 }
