--- a/src/i18n/json/fr.json
+++ b/src/i18n/json/fr.json
@@ -219,5 +219,11 @@
             "submit": "Envoyé",
             "selectLanguage": "Sélectionnez votre langue"
         }
+    },
+    "header": {
+        "navigationQuestion": "Choisissez où vous souhaitez naviguer :",
+        "homePage": "Accueil",
+        "profilePage": "Profil",
+        "settingsPage": "Paramètres"
     }
 }
