[ADD] Quizz, Question and result page

--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -237,5 +237,12 @@
         "homePage": "Home",
         "profilePage": "Profile",
         "settingsPage": "Settings"
+    },
+    "quizzpage": {
+        "start": "Start",
+        "select": "Select a process",
+        "yes": "Yes",
+        "no": "No",
+        "toDo": "to do"
     }
 }
