[ADD] Sending mail handling for forgotPassword Page

--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -244,5 +244,11 @@
         "yes": "Yes",
         "no": "No",
         "toDo": "to do"
+    },
+    "forgotPassword": {
+        "title": "Forgot Password ?\n",
+        "placeholder": "Email\n",
+        "submit": "Submit",
+        "back": "Back"
     }
 }
