[ADD] reult link and dark mode on edit profil

--- a/src/i18n/json/fr.json
+++ b/src/i18n/json/fr.json
@@ -242,6 +242,7 @@
         "select": "Sélectionnez une procédure",
         "yes": "Oui",
         "no": "Non",
-        "toDo": "À faire"
+        "toDo": "À faire",
+        "done": "Fait"
     }
 }
