--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -243,6 +243,7 @@
         "select": "Select a process",
         "yes": "Yes",
         "no": "No",
-        "toDo": "to do"
+        "toDo": "To do",
+        "done": "Done"
     }
 }
