[ADD] Improve Settings page and Drawer

--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -148,6 +148,7 @@
     "settings": {
         "pageTitle": "Settings",
         "darkMode": "Dark mode",
+        "lightMode": "Light mode",
         "version": "Version",
         "disconnect": "Disconnect",
         "deleteAccount": "Delete account",
