[ADD] multiple langage

--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -93,6 +93,7 @@
             "hour": "Hour",
             "add": {
                 "title": "Add event",
+                "message": "Event added successfully",
                 "button": "Add",
                 "ok": "OK",
                 "process": {
