[FIX] Langage and getcalendar

--- a/src/i18n/json/de.json
+++ b/src/i18n/json/de.json
@@ -126,7 +126,8 @@
             "title": "Fehler",
             "message": "Etwas ist schief gelaufen, bitte versuchen Sie es später erneut",
             "button": "OK"
-        }
+        },
+        "noEvent": "keine Veranstaltung geplant"
     },
     "processidea": {
         "pagetitle": "Neue Prozessidee",
