--- a/src/i18n/json/es.json
+++ b/src/i18n/json/es.json
@@ -126,7 +126,8 @@
             "title": "Error",
             "message": "Algo salió mal, por favor inténtalo de nuevo más tarde",
             "button": "OK"
-        }
+        },
+        "noEvent": "ningún evento planeado"
     },
     "processidea": {
         "pagetitle": "Nueva idea de proceso",
