--- a/src/i18n/json/id.json
+++ b/src/i18n/json/id.json
@@ -126,7 +126,8 @@
             "title": "Kesalahan",
             "message": "Ada yang salah, harap coba lagi nanti",
             "button": "OK"
-        }
+        },
+        "noEvent": "tidak ada acara yang direncanakan"
     },
     "processidea": {
         "pagetitle": "Ide Proses Baru",
