[FIX] profile picture in edit info and longHorizontal button

--- a/src/i18n/json/en.json
+++ b/src/i18n/json/en.json
@@ -232,7 +232,8 @@
             "name": "Name",
             "phoneNumber": "Phone number",
             "submit": "Submit",
-            "selectLanguage": "Select language"
+            "selectLanguage": "Select language",
+            "picture":"Choose an avatar"
         }
     },
     "header": {
